...
                        IconButton(
                            onClick = onDiscoverMoviesClick,
                            modifier = Modifier.testTag("More discover movies Icon")
                        ) {
                            Icon(
                                imageVector = Icons.AutoMirrored.Filled.ArrowForwardIos,
                                contentDescription = "More discover movies",
                            )
                        }
                    }
                    LazyRow(
                        modifier = Modifier
                            .testTag("Discover LazyRow"),
                    ) {
                        items(discoverMovies) { movie ->
                            MovieCoverImage(
                                movie = movie,
                                onMovieClick = onMovieClick,
                                imageUrl = "${
...
