...
            }


            LazyColumn(
                modifier = modifier
                    .fillMaxSize()
                    .testTag("Movie LazyColumn")
            ) {
                items(movies.chunked(2)) { moviePair ->
                    Row(modifier = Modifier.fillMaxWidth()) {
                        moviePair.forEach { movie ->
                            MovieCoverImageList(
                                movie = movie,
...
